# cc-python

./: CHANGELOG.md  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.__project_uid }}/: .pre-commit-config.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  {% if cookiecutter.docker -%} .dockerignore {%- endif %}  {% if cookiecutter.docker -%} Dockerfile {%- endif %}
{{ cookiecutter.__project_uid }}/docs/: conf.py  contact.md  index.md  install.md  reference.md  style.rts  template.rtt  usage.md
{{ cookiecutter.__project_uid }}/src/{{ cookiecutter.__package_name }}/: __cli__.py  __init__.py  {% if cookiecutter.gui -%} __gui__.py {%- endif %}
{{ cookiecutter.__project_uid }}/src/{{ cookiecutter.__package_name }}/{% if cookiecutter.gui -%} gui {%- endif %}/: __init__.py  app.py
