[tool.poetry]
name = "{{ cookiecutter.__package_name }}"
description = "{{ cookiecutter.project_name }}"
version = "0.1.0"
authors = ["Ninety Four <ninetyfour.be@gmail.com>"]
readme = "README.md"
packages = [
  { include = "{{ cookiecutter.__package_name }}", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
click = ">=8.0.1"

[tool.poetry.dev-dependencies]
nox = ">=2022.1.7"

[tool.poetry.scripts]
{{ cookiecutter.__project_slug }} = "{{ cookiecutter.__package_name }}.__cli__:main"
{% if cookiecutter.gui -%}
{{ cookiecutter.__project_slug }}-gui = "{{ cookiecutter.__package_name }}.__gui__:main"
{%- endif %}

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
